styles.css
:root {
    /* Fonts */
    --font-family-eng: 'Fredoka', sans-serif;
    --font-family-jp: 'Kosugi Maru', sans-serif;

    /* Colors */
    --container-border: rgb(169, 169, 169);
    --deep-blue-text: rgb(33, 43, 65);
    --light-green-btn: rgb(88, 204, 2);
    --light-green-btn-shadow: rgb(81, 155, 24);
    --lilac-btn: rgb(206, 130, 255);
    --lilac-btn-shadow: rgb(155, 107, 188);
    --off-white-background: rgb(247, 247, 247);
    --sky-blue-btn: rgb(28, 176, 246);
    --sky-blue-btn-shadow: rgb(24 153 214);
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    background-color: var(--off-white-background);
    color: var(--deep-blue-text);
    font-family: var(--font-family-eng);
}

button {
    cursor: pointer;
}

input[type='checkbox'] {
    cursor: pointer;
}

ol, ul {
    padding-left: 2rem;
}

.btn-raised,
#toggle-edit-container {
    align-items: center;
    background-color: var(--sky-blue-btn);
    border: none;
    border-radius: 0.333rem;
    box-shadow: 1px 4px var(--sky-blue-btn-shadow);
    color: white;
    display: flex;
    font-family: inherit;
    justify-content: center;
    padding: 0.25rem;
}

.btn-raised:active,
#toggle-edit-container:active,
#toggle-edit-container:has(input:checked) {
    transform: translateY(4px);
    box-shadow: none !important;
}

.category-list-label {
    font-size: 1.25rem;
}

.checkbox-list {
    font-size: 1rem;
    padding-left: 0;
}

.checkbox-list li,
.checkbox-list ol,
.checkbox-list ul {
    list-style: none;
}

.hidden {
    display: none !important;
}

.is-clozed {
    border-bottom: 3px solid black;
    color: transparent;
}

.level-list-label {
    font-size: 1.5rem;
}

.menu-header {
    font-size: 4rem;
    text-align: center;
}

.nav-btn {
    background-color: var(--light-green-btn);
    box-shadow: 1px 4px var(--light-green-btn-shadow);
}

.nav-btn-container {
    align-self: flex-start;
}

.question-content {
    align-items: center;
    display: flex;
    flex-direction: column;
    gap: 2.5rem;
    margin: 1rem 0;
}

/* .question-nav-btn,
#toggle-edit-container {
    align-items: center;
    background-color: var(--sky-blue-btn);
    border: none;
    border-radius: 0.333rem;
    box-shadow: 1px 4px var(--sky-blue-btn-shadow);
    color: white;
    display: flex;
    justify-content: center;
    padding: 0.25rem;
}

.question-nav-btn:active,
#toggle-edit-container:has(input:checked) {
    transform: translateY(4px);
    box-shadow: none;
} */

.question-nav-btn-icon {
    aspect-ratio: 1;
    width: 3rem;
}

.question-nav-controls {
    display: flex;
    gap: 1rem;
}

.quiz-interface {
    align-items: center;
    background-color: white;
    display: flex;
    flex-direction: column;
    height: 100vh;
    justify-content: space-between;
    padding: 1rem 1rem 3rem;
    text-align: center;
}

.select-vocab-interface {
    background: white;
    border: 2px solid var(--container-border);
    border-radius: 1rem;
    box-shadow: 2px 6px var(--container-border);
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    height: 90vh;
    margin: 5vh auto 0;
    padding: 1.5rem 3rem;
    width: min(80%, 600px);
}

.sentence-eng {
    display: flex;
    flex-direction: row;
    font-size: 5rem;
    gap: 1.19rem;
    outline: none;
}

.sentence-jp {
    font-family: var(--font-family-jp);
    font-size: 3rem;
    outline: none;
    width: fit-content
}

.toggle-btn {
    cursor: pointer;
}

.vocab-checkbox {
    margin-right: 0.5rem;
    height: 1.25rem;
    vertical-align: middle;
    width: 1.25rem;
}

.vocab-list-item:last-of-type {
    margin-bottom: 0.5rem;
}

.vocab-list-label {
    display: block;
    margin-bottom: 0.25em;
}

.word-eng {
    cursor: pointer;
    height: 1lh;
    box-sizing: border-box;
}

#start-quiz-btn {
    background-color: var(--light-green-btn);
    box-shadow: 1px 4px var(--light-green-btn-shadow);
    font-size: 2rem;
    margin: auto;
    padding: 0.5rem 1rem;
    width: fit-content;
}

#toggle-edit {
    display: none;
}

#toggle-edit-container:active,
#toggle-edit-container:has(input:checked) {
    background-color: var(--lilac-btn);
}

#vocab-list {
    overflow-y: scroll;
}

